password visibility btn no longer hides the keyboard on mobile
minor styling changes on entry pages

--- a/src/components/pages/forgotPasswordPage/forgotPasswordStyles.module.scss
+++ b/src/components/pages/forgotPasswordPage/forgotPasswordStyles.module.scss
@@ -1,19 +1,26 @@
+@use "../../../scss/breakpoints" as b;
+
 .container {
   display: flex;
   flex-direction: column;
   gap: 10px;
   margin: auto;
-  padding: 50px;
+  padding: 30px;
   border: 1px solid var(--color-border);
   border-radius: var(--border-radius);
-}
+  height: calc(100dvh - var(--height-navbar) - var(--height-footer));
 
-.form {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  width: 500px;
-  margin: auto;
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    // width: 375px;
+    margin: auto;
+  }
+
+  @include b.xs-screen {
+    border: none;
+  }
 }
 
 .link {
