--- a/src/components/pages/homePage/homePage.module.scss
+++ b/src/components/pages/homePage/homePage.module.scss
@@ -41,33 +41,61 @@
   top: 100%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: var(--border-radius);
-  border: 1px solid var(--color-border);
+  // border-radius: var(--border-radius);
+  // border: black;
 
-  & :focus-within {
-    outline: 1px solid var(--color-primary) !important;
-  }
+  // & :focus-within {
+  //   outline: 1px solid var(--color-primary) !important;
+  // }
 
   &.mobile {
     width: 95%;
   }
 
-  &:hover {
-    border-color: var(--color-border-hover);
-  }
+  // &:hover {
+  //   border-color: var(--color-border-hover);
+  // }
+}
+
+.magnifying_glass {
 }
 
 .searchbox {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+  gap: 5px;
+  background: white;
   width: 500px;
-  height: 64px;
-  background: var(--color-bg-primary);
-  border-radius: 5px;
-  color: var(--color-text);
+  height: 50px;
+  border-radius: var(--border-radius);
+  border: black;
+  color: black;
   font-size: 18px;
-  padding: 0 20px;
+  padding: 0 10px;
   border: none;
+
+  svg {
+    position: absolute;
+    left: 10px;
+    height: 25px;
+    fill: #00000040;
+  }
+
+  input {
+    border: none;
+    padding-left: 35px;
+    flex-grow: 1;
+    outline: none;
+    height: 100%;
+    font-size: 18px;
+  }
   &.mobile {
     width: 100%;
+  }
+  &:focus-within {
+    outline: 3px solid var(--color-primary) !important;
   }
 }
 
