--- a/src/components/pages/signUpPage/signUpPage.module.scss
+++ b/src/components/pages/signUpPage/signUpPage.module.scss
@@ -18,7 +18,7 @@
   form {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     max-width: 500px;
     min-width: 300px;
     margin: auto;
