--- a/src/components/shared/inputs/passwordInput/passwordInput.module.scss
+++ b/src/components/shared/inputs/passwordInput/passwordInput.module.scss
@@ -54,9 +54,17 @@
   width: 20px;
 }
 
-.visibility-icon {
+.visibility_icon_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   right: 6px;
+  height: 100%;
+  background: transparent;
+}
+
+.visibility-icon {
   cursor: pointer;
   fill: var(--color-border);
   background: transparent;
